# cpp-platform-game

./: CMakeLists.txt  LICENSE  MapGenerator.cpp  main.cpp
headers/: ConvertBackground.hpp  MapGenerator.h  MapGenerator.hpp  Protagonist.hpp  config.hpp
headers/helpers/: Button.hpp  ConvertBackground.hpp  config.hpp
src/: ConvertBackground.cpp  MapGenerator.cpp  Protagonist.cpp
src/enemies/: Enemy.cpp
src/helpers/: Button.cpp  ConvertBackground.cpp
